# debug

./: CMakeLists.txt  README.md
include/: breakpoint.hpp  debugger.hpp  registers.hpp
src/: minidbg.cpp
test/: .log.txt.swp  d2_debug  d2_info  debug_info  debug_test  debug_test.c  dump  dwarf_hello  hello_world  hello_world.cpp  readdebug
